--- a/doc/main_XGS.Rmd
+++ b/doc/main_XGS.Rmd
@@ -1,10 +1,10 @@
 ---
-title: "Main"
+title: "XGboost+SMOTE"
 author: "Weiwei Song"
 output:
   pdf_document: default
 ---
- 
+
 
 ```{r message=FALSE}
 if(!require("EBImage")){
@@ -81,8 +81,6 @@ In this chunk, we have a set of controls for the evaluation experiments.
 + (T/F) process features for test set
 
 ```{r exp_setup}
-run.cv <- FALSE # run cross-validation on the training set
-sample.reweight <- TRUE # run sample reweighting in model training
 K <- 5  # number of CV folds
 run.feature.train <- TRUE # process features for training set
 run.test <- TRUE # run evaluation on an independent test set
